[package]
name = "paul-bot"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
dotenv = "0.15.0"
teloxide = { version = "0.12.2", features = ["macros", "sqlite-storage"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rand = "0.8.5"
